--- a/Styles.CSS
+++ b/Styles.CSS
@@ -169,11 +169,11 @@ html{
   transform: translateY(-8px) rotate(-45deg);
 }
 }
-/*Hero section*/
-.main__container{
+/*1st page*/
+.main{
   display: grid;
-  align-items: center;
-  justify-self: center;
+  /*align-items: center;*/
+  /*justify-self: center;*/
   margin: 0 auto;
   height: 90vh;
   background-color: #d6faf4;
@@ -183,17 +183,24 @@ html{
   padding: 0 50px;
 
 }
+.main__container{
+  justify-content: right;
+  display: flex;
+  position: absolute;
+  left: 150px;
+}
 .main__content h1{
-font-size: 4rem;
+font-size: 10em;
 background-color: #ff0844;
 background-image: linear-gradient(to top, #ff084f 0%, #ffb199 100%);
-background-size: 100%;
+align-content: flex-end;
+text-align: right;
 -webkit-background-clip: text;
 -moz-background-clip: text;
 -webkit-text-fill-color: transparent;
 }
 .main__content h5 {
-  font-size: 4rem;
+  font-size: 4em;
   background-color: #ff0844;
   background-image: linear-gradient(to top, #b721ff 0%, #21d4fd 100%);
   background-size: 100%;
@@ -201,6 +208,7 @@ background-size: 100%;
   -moz-background-clip: text;
   -webkit-text-fill-color: transparent;
   -moz-text-fill-color:transparent;
+  text-align: right;
   }
   .main__content p{
     margin-top: 1rem;
@@ -208,52 +216,16 @@ background-size: 100%;
     font-weight: 700;
     color: #fff;
   }
-.main__btn{
-    font-size: 1rem;
-    background-image: linear-gradient(to top, #f77062 0%, #fe5196 100%);
-    padding: 14px 32px;
-    border: none;
-    border-radius: 4px;
-    margin-top: 2rem;
-    cursor: pointer;
-    position: relative;
-    transition: all 0.35s;
-    outline: none;
+  .My_image {
+    display: flex;
 
   }
-  .main__btn a {
-    position: relative;
-    z-index: Z;
-    color: #fff;
-    text-decoration: none;
+  #My_img {
+    height: 35em;
+    width: 35em;
+    align-self: flex-start;
+  }
 
-  }
-  .main__btn:after{
-    position: absolute;
-    content: '';
-    top: 0;
-    left: 0;
-    width: 0;
-    height: 100%;
-    background: #4837ff;
-    transition: all 0.35s;
-    border-radius: 4px;
-    
-  }
-  .main__btn:hover {
-    color: #fff;
-  }
-  .main__btn.main__btn:hoverafter{
-    width: 100;
-  }
-  .main__img--container {
-    text-align: center;
-
-  }
-  #main__img {
-    height: 80%;
-    width: 80%;
-  }
   @media screen and (max-width: 768px){
     .main__container{
       display: grid;
@@ -302,15 +274,16 @@ background-size: 100%;
   justify-self: center;
   margin: 0 auto;
   height: 90vh;
-  background-color: #d6faf4;
   z-index: 1;
   width: 100%;
   max-width: 1300px;
   padding: 0 50px;
-
-
     } 
-    .Project h1
+    .Projects_tiles{
+      display:flex
+  
+    }
+     h1
     {
       background-color:#ff8177;
       background-image: linear-gradient(to right,#ff8177 0%,#ff867a 0%,#ff8c7f 21%,#f99185 52%,#cf556c 78%,
@@ -322,20 +295,10 @@ background-size: 100%;
       -moz-background-clip: text;
       -webkit-text-fill-color: transparent;
       -moz-text-fill-color:transparent;
-
-    }
-    .projects_tiles{
-      display: flex;
       justify-content: center;
-      align-items: center;
-      text-decoration: none;
-      height: 1em;
-      width: 1em;
-      border: none;
-      outline: none;
-      color: black;
 
     }
+
     .Research{
       display: grid;
       align-items: center;
@@ -348,9 +311,16 @@ background-size: 100%;
       max-width: 1300px;
       padding: 0 50px;
     
-        } 
+        }   
+        .main__img--container {
+          text-align: center;
+      
+        }
+        #main__img {
+          height: 80%;
+          width: 80%;
     
-        .Last-page{
+    .Last-Page{
           display: grid;
           align-items: center;
           justify-self: center;
@@ -362,6 +332,44 @@ background-size: 100%;
           max-width: 1300px;
           padding: 0 50px;
         
-            } 
+    }
+    .main__btn{
+      font-size: 1rem;
+      background-image: linear-gradient(to top, #f77062 0%, #fe5196 100%);
+      padding: 14px 32px;
+      border: none;
+      border-radius: 4px;
+      margin-top: 2rem;
+      cursor: pointer;
+      position: relative;
+      transition: all 0.35s;
+      outline: none;
+  
+    }
+    .last_button{
+      position: relative;
+      z-index: Z;
+      color: #fff;
+      text-decoration: none;
+  
+    }
+    .last_button:after{
+      position: absolute;
+      content: '';
+      top: 0;
+      left: 0;
+      width: 0;
+      height: 100%;
+      background: #4837ff;
+      transition: all 0.35s;
+      border-radius: 4px;
+      
+    }
+    .last_button:hover {
+      color: #fff;
+    }
+    .last_button:hoverafter{
+      width: 100;
+    }
         
       
