--- a/Styles.CSS
+++ b/Styles.CSS
@@ -172,11 +172,9 @@ html{
 /*1st page*/
 .main{
   display: grid;
-  /*align-items: center;*/
-  /*justify-self: center;*/
   margin: 0 auto;
   height: 90vh;
-  background-color: #d6faf4;
+  background-color:#D1DFEA;
   z-index: 1;
   width: 100%;
   max-width: 1300px;
@@ -184,20 +182,15 @@ html{
 
 }
 .main__container{
-  justify-content: right;
   display: flex;
-  position: absolute;
-  left: 150px;
+  position:relative;
 }
 .main__content h1{
 font-size: 10em;
 background-color: #ff0844;
 background-image: linear-gradient(to top, #ff084f 0%, #ffb199 100%);
-align-content: flex-end;
+/*align-content: flex-end;*/
 text-align: right;
--webkit-background-clip: text;
--moz-background-clip: text;
--webkit-text-fill-color: transparent;
 }
 .main__content h5 {
   font-size: 4em;
@@ -217,13 +210,8 @@ text-align: right;
     color: #fff;
   }
   .My_image {
-    display: flex;
-
-  }
-  #My_img {
-    height: 35em;
-    width: 35em;
-    align-self: flex-start;
+    float: right;
+    
   }
 
   @media screen and (max-width: 768px){
