--- a/Styles.CSS
+++ b/Styles.CSS
@@ -35,7 +35,7 @@
     display: flex;
     align-items: center;
     text-decoration: none;
-    font-size: 2rem;
+    font-size: 3rem;
     cursor: pointer;
 }
 .fa-gem{
@@ -159,49 +159,48 @@ html{
    cursor: pointer;
 
  }
- #mobile-menu.is-active .bar:nth-child(2){
-   opacity: 0;
- }
- #mobile-menu.is-active .bar:nth-child(1){
-   transform: translateY(8px) rotate(45deg);
- }
- #mobile-menu.is-active .bar:nth-child(3){
-  transform: translateY(-8px) rotate(-45deg);
+
 }
-}
+
 /*1st page*/
 .main{
-  display: grid;
+  display:grid;
   margin: 0 auto;
   height: 90vh;
   background-color:#D1DFEA;
   z-index: 1;
   width: 100%;
-  max-width: 1300px;
+  max-width: 85rem;
 
 }
 .main__container{
   display: flex;
-  position:relative;
+  position: relative;
+  
 }
-.main__content h1{
-font-size: 10em;
-background-color: #ff0844;
-background-image: linear-gradient(to top, #ff084f 0%, #ffb199 100%);
-float: right;
-width: 50%
+.main__container h1{
+font-size: 5rem;
+background-color: #ff0040;
+position: relative;
 }
-.main__content h4 {
-  float: right;
-   width: 50%
+.main__container h4{
+  font-size: 1.1rem;
+  margin-bottom: 2rem;
+}
+
+  .details{
+    float:right;  
+    padding-top: 2rem;
+    padding-right: 4rem;
   }
- 
   
   .My_image {
-   float: left;
-   width: 50%
-   
-   
+   height: 100%;
+   width: 40%;
+   margin-right: 5rem;
+   margin-left: 3rem;
+   margin-top: 4rem;
+  
   }
 
   @media screen and (max-width: 768px){
@@ -247,15 +246,13 @@ width: 50%
     }
   }
     .Project{
-  display: grid;
-  align-items: center;
-  justify-self: center;
-  margin: 0 auto;
-  height: 90vh;
-  z-index: 1;
-  width: 100%;
-  max-width: 1300px;
-  padding: 0 50px;
+      display:grid;
+      margin: 0 auto;
+      height: 90vh;
+      background-color:#D1DFEA;
+      z-index: 1;
+      width: 100%;
+      max-width: 85rem;
     } 
     .Projects_tiles{
       display:flex
@@ -263,6 +260,7 @@ width: 50%
     }
      h1
     {
+      margin-top: 5rem;
       background-color:#ff8177;
       background-image: linear-gradient(to right,#ff8177 0%,#ff867a 0%,#ff8c7f 21%,#f99185 52%,#cf556c 78%,
       #b12a5b 100%);
@@ -278,18 +276,19 @@ width: 50%
     }
 
     .Research{
-      display: grid;
-      align-items: center;
-      justify-self: center;
+      display:grid;
       margin: 0 auto;
       height: 90vh;
-      background-color: #d6faf4;
+      background-color:#D1DFEA;
       z-index: 1;
       width: 100%;
-      max-width: 1300px;
-      padding: 0 50px;
-    
+      max-width: 85rem;
+      margin-bottom: 2.5rem;
         }   
+        .Research h1{
+          margin-left: 3rem;
+          font-size: 4rem;
+        }
         .main__img--container {
           text-align: center;
       
@@ -298,18 +297,14 @@ width: 50%
           height: 80%;
           width: 80%;
     
-    .Last-Page{
-          display: grid;
-          align-items: center;
-          justify-self: center;
-          margin: 0 auto;
-          height: 90vh;
-          background-color: #d6faf4;
-          z-index: 1;
-          width: 100%;
-          max-width: 1300px;
-          padding: 0 50px;
-        
+      .Last-Page{
+      display:grid;
+      margin: 0 auto;
+      height: 90vh;
+      background-color:#D1DFEA;
+      z-index: 1;
+      width: 100%;
+      max-width: 85rem;   
     }
     .main__btn{
       font-size: 1rem;
