--- a/Styles.CSS
+++ b/Styles.CSS
@@ -169,7 +169,7 @@ body{
 
 
 /*1st page*/
-#about_me{
+#about_me {
   display:grid;
   margin: 0 auto;
   height: 35rem;
@@ -179,7 +179,7 @@ body{
   max-width: 85rem;
 
 }
-.main__container{
+.main__container {
   display: flex;
   position: relative;
   
@@ -271,7 +271,7 @@ position: relative;
       text-align: center;
       font-size: 4rem;
       max-width: 35%;
-      margin-bottom: 1rem;
+      margin-bottom: 8rem;
         
     }
     .Projects_tiles{
@@ -280,9 +280,10 @@ position: relative;
       flex-wrap: wrap;
       justify-content: space-between;
       margin:2em 9em;
-  
+      
     }
-    .projects_tiles .project{
+     .project{
+      display:inline-block;
       margin-bottom:1em;
       color:whitesmoke;
       height:16em;
@@ -303,7 +304,7 @@ position: relative;
     #my_Research{
       display:grid;
       margin: 0 auto;
-      height: 90vh;
+      height: 60rem;
       background-color:#D1DFEA;
       z-index: 1;
       width: 100%;
@@ -322,15 +323,131 @@ position: relative;
           max-width: 35%;
         }
 
-        .Research__Card{
-          display: flex;
-          float: left;
+        .Research__container{
+          font-size: 3rem;
+          align-items: center;
+          margin-top: 3rem;
+          margin-left: 2rem;
+          justify-content: space-between;
+
                 }
-        .Research__Card p{
-          text-transform: capitalize;
-          font-size: 2rem;
-          background-color: lawngreen;
-        }
+          #Research__card1{
+            background-color: lawngreen;
+            display: inline-block;
+            margin-bottom: 2rem;
+            height: 4rem;
+            width: 25rem;
+            text-align: center;
+          }     
+          #Research__card1:hover{
+            height: 5rem;
+            width: 27rem;
+          } 
+          .Research__Card2 a:link{
+            background-color: red;
+            display: inline-block;  
+            margin-left: 4rem;
+            margin-bottom: 2rem;
+            height: 4rem;
+            width: 25rem;
+            text-align: center;
+            text-decoration: rgb(5, 5, 5);
+          }
+          .Research__Card2{
+            background-color: red;
+            display: inline-block;  
+            margin-left: 4rem;
+            margin-bottom: 2rem;
+            height: 4rem;
+            width: 25rem;
+            text-align: center;
+            text-decoration: rgb(5, 5, 5);
+          }
+          .Research__card2 a:hover{
+            height: 5rem;
+            width: 27rem;
+          } 
+          #Research__card3{
+            background-color:rgb(255, 0, 0);
+            display: inline-block;
+            margin-top: 1rem;
+            margin-left: 8rem;
+            height: 4rem;
+            width: 25rem;
+            text-align: center;
+          }
+          #Research__card3:hover{
+            height: 5rem;
+            width: 27rem;
+          } 
+          #Research__card4{
+            background-color:seagreen;
+            display: inline-block;
+            margin-left: 12rem;
+            margin-top: 2rem;
+            height: 4rem;
+            width: 25rem;
+            text-align: center;
+          }
+          #Research__card4:hover{
+            height: 5rem;
+            width: 27rem;
+          } 
+          #Research__card5{
+            background-color:rgb(238, 9, 169);
+            display: inline-block;
+            margin-left: 16rem;
+            margin-top: 2rem;     
+            height: 4rem;
+            width: 25rem;    
+            text-align: center;
+          }
+          #Research__card5:hover{
+            height: 5rem;
+            width: 27rem;
+          } 
+          #Research__card6{
+            background-color:rgb(255, 94, 0);
+            display: inline-block;
+            margin-left: 20rem;
+            margin-top: 2rem;
+            height: 4rem;
+            width: 25rem;
+            text-align: center;
+          }
+          #Research__card6:hover{
+            height: 5rem;
+            width: 27rem;
+          } 
+          #Research__card7{
+            background-color:rgb(255, 220, 21);
+            display: inline-block;
+            margin-left: 24rem;
+            margin-top: 2rem;
+            height: 4rem;
+            width: 25rem;
+            text-align: center;
+          }
+          #Research__card7:hover{
+            height: 5rem;
+            width: 27rem;
+          } 
+          #Research__card8{
+            background-color:rgb(101, 64, 235);
+            display: inline-block;
+            margin-left: 28rem;
+            margin-top: 2rem;
+            height: 4rem;
+            width: 25rem;
+            text-align: center;
+          }
+          #Research__card8:hover{
+            height: 5rem;
+            width: 27rem;
+          } 
+
+
+  
     
 
         /* Last page */
@@ -355,27 +472,39 @@ position: relative;
           text-align: center;
           max-width: 35%;
     }
-    .main__btn{
+
+    .Social_Media{
+      height: 2rem;
+      width: 10rem;
+      margin-bottom: 10rem;
+      margin: left 2rem; ;
+    }
+    .Last-Page h2{
+      margin-top: 5rem;
+      margin-bottom: 1rem;
+    }
+    .Mail_botton{
       font-size: 1rem;
       background-image: linear-gradient(to top, #f77062 0%, #fe5196 100%);
-      padding: 14px 32px;
+      padding: 0.5rem 1rem;
       border: none;
       border-radius: 4px;
-      margin-top: 2rem;
+      margin-top: 10rem;
       cursor: pointer;
       position: relative;
       transition: all 0.35s;
       outline: none;
+      margin-bottom: ;
   
     }
-    .last_button{
+    .Mail_button{
       position: relative;
       z-index: Z;
       color: #fff;
       text-decoration: none;
   
     }
-    .last_button:after{
+    .Mail_button:after{
       position: absolute;
       content: '';
       top: 0;
@@ -387,10 +516,10 @@ position: relative;
       border-radius: 4px;
       
     }
-    .last_button:hover {
+    .Mail_button:hover {
       color: #fff;
     }
-    .last_button:hoverafter{
+    .Mail_button:hoverafter{
       width: 100;
     }
     
@@ -399,17 +528,13 @@ position: relative;
       height: 3rem;
       display: flex;
       align-items: center;
-      font-size:1.5em;
-      margin-top: 8rem;
+      
     
     }
     .footer_text{
        color: #fff;
-       display: flex;
-       align-items: center;
-       justify-content: center;
-       text-decoration: none;
        font-size: 1rem;
+       margin-left: 30rem;
     }
         
       
