--- a/Styles.CSS
+++ b/Styles.CSS
@@ -309,7 +309,7 @@ position: relative;
       z-index: 1;
       width: 100%;
       max-width: 85rem;
-      margin-bottom: 3rem;
+      margin-bottom: 1.3rem;
         }  
 
         .Research h1{
@@ -471,13 +471,19 @@ position: relative;
           #b12a5b 100%);
           text-align: center;
           max-width: 35%;
+          margin-bottom: 1.5rem;
     }
-
+    .Last-Page h3{
+      margin-left: 70rem;
+    }
     .Social_Media{
-      height: 2rem;
-      width: 10rem;
       margin-bottom: 10rem;
-      margin: left 2rem; ;
+      margin-left: 70rem;
+
+    }
+    .Social_Media i{
+      margin: 0.4rem;
+      
     }
     .Last-Page h2{
       margin-top: 5rem;
@@ -494,7 +500,7 @@ position: relative;
       position: relative;
       transition: all 0.35s;
       outline: none;
-      margin-bottom: ;
+      margin-bottom: 0;
   
     }
     .Mail_button{
@@ -523,18 +529,20 @@ position: relative;
       width: 100;
     }
     
-    .Footer{
+    footer{
       background: #131313;
       height: 3rem;
       display: flex;
       align-items: center;
-      
+      z-index: 999;
+      bottom: 0%;
     
     }
     .footer_text{
        color: #fff;
        font-size: 1rem;
        margin-left: 30rem;
+       align-items: center;
     }
         
       
