--- a/Styles.CSS
+++ b/Styles.CSS
@@ -470,7 +470,7 @@ position: relative;
           background-image: linear-gradient(to right,#ff8177 0%,#ff867a 0%,#ff8c7f 21%,#f99185 52%,#cf556c 78%,
           #b12a5b 100%);
           text-align: center;
-          max-width: 35%;
+          max-width: 30%;
           margin-bottom: 1.5rem;
     }
     .Last-Page h3{
@@ -486,10 +486,12 @@ position: relative;
       
     }
     .Last-Page h2{
-      margin-top: 5rem;
+      margin-top: 9rem;
       margin-bottom: 1rem;
+      margin-left: 4rem;
     }
     .Mail_botton{
+      margin-left: 6rem;
       font-size: 1rem;
       background-image: linear-gradient(to top, #f77062 0%, #fe5196 100%);
       padding: 0.5rem 1rem;
@@ -500,7 +502,8 @@ position: relative;
       position: relative;
       transition: all 0.35s;
       outline: none;
-      margin-bottom: 0;
+      margin-bottom: 0.5rem;
+
   
     }
     .Mail_button{
@@ -528,14 +531,22 @@ position: relative;
     .Mail_button:hoverafter{
       width: 100;
     }
+    .Last-Page p{
+      font-size: 2rem;
+      font-family: cursive;
+      margin-left: 5rem;
+    }
+    .Last-Page h4{
+      margin-left: 70rem;
+    }
     
     footer{
       background: #131313;
       height: 3rem;
       display: flex;
-      align-items: center;
-      z-index: 999;
+      align-items:center;
       bottom: 0%;
+      padding-bottom: 0%;
     
     }
     .footer_text{
